k8s/app/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: todo-app
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30008
